--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,6 +103,7 @@ tr.body {
 	font-size:14px;
 	background:url(/public/images/trash_icon.jpg) no-repeat 0 3px;
 	padding-left:40px;
+	height:36px;
 }
 
 .left .lk {
