--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,7 +132,7 @@ ul.tree_menu li{
 	clear:both;
 }
 ul.tree_menu li a.active {
-	padding: 0 20px 4px 10px;	
+	padding: 2px 20px 2px 10px;	
 	margin-left:-10px;
 	background:url(/public/images/active_menu_bg.jpg) top right #90d70a no-repeat; 
 	color:#000000;
@@ -403,12 +403,12 @@ ul.tree_menu li ul a.active {
 .auth_form {
 	background:#f5f5e9;
 	width:530px;
-	margin:auto;
-	padding-bottom:5px;
+	margin-left:24px;
+	padding-bottom:30px;
 }
 
 .formField {
-	padding: 30px 0 0 92px;
+	padding: 30px 0 20px 92px;
 }
 .formField .error{
 	color: #ff6600;
