--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,7 +131,7 @@ ul.tree_menu li{
 	float:left;
 	clear:both;
 }
-ul.tree_menu li a.active {
+ul.tree_menu li .active {
 	padding: 2px 20px 2px 10px;	
 	margin-left:-10px;
 	background:url(/public/images/active_menu_bg.jpg) top right #90d70a no-repeat; 
