--- a/admin/admin.css
+++ b/admin/admin.css
@@ -419,7 +419,6 @@ margin:0 3px 0 5px;
 
 /********************ORDER*************************/
 .order_sort_form {
-	background:#f5f5ea;
 	font-size:14px;
 	padding:20px;
 }
@@ -578,4 +577,84 @@ display:inline;
 	font-family:"Trebuchet MS",arial;
 	font-size:14px;
 	height:150px;
+}
+
+/*****************************ORDERS*******************************/
+.orders {
+	width:80%;
+}
+.orders .item{
+	background:#f5f5ea;
+	padding:20px;
+	margin-bottom:30px;
+}
+.orders td {
+	vertical-align:top;
+	border-bottom:1px solid #000;
+	padding:15px 0;
+}
+
+.orders tr.last td {
+	border-bottom:0;
+}
+
+.orders td.image {
+	width:106px;
+	height:106px;
+	padding-right:15px;
+}
+.orders td.image image{
+	width:106px;
+	height:106px;
+}
+.orders td.description {
+	line-height:25px;
+}
+
+.orders td.number input {
+	width:52px;	
+	font-size:14px;
+	font-family:"Trebuchet MS",Arial;
+}
+
+.orders .address{
+	font-size:16px;
+	margin-left:121px;
+}
+
+.trash_itogo {
+	font-size:18px;
+	width:80%;
+	text-align:center;
+	padding:15px 0;
+}
+
+.function_line2{
+	border: 1px solid #000000;
+	width:10px;
+	font-size:20px;
+	height:10px;
+	line-height:8px;
+	cursor:pointer;
+	text-align:center;
+	display:block;
+	float:left;
+	margin: 5px 10px 0 0;
+}
+
+.number_order {
+	font-size:18px;
+	border-bottom:1px dashed #000;
+	margin-right:10px;
+}
+
+.print_icon {
+
+}
+.change_status_form {
+	float:right;
+}
+
+.change_status {
+	float:right;
 }
