--- a/admin/admin.css
+++ b/admin/admin.css
@@ -603,7 +603,7 @@ display:inline;
 	height:106px;
 	padding-right:15px;
 }
-.orders td.image image{
+.orders td.image img{
 	width:106px;
 	height:106px;
 }
