--- a/public/css/style.css
+++ b/public/css/style.css
@@ -200,7 +200,7 @@ padding:2px;
 height:310px;
 }
 #list .item.new{
-border:2px solid #009900;
+border:2px solid #86AE19;
 padding:2px;
 height:310px;
 }
