--- a/public/css/style.css
+++ b/public/css/style.css
@@ -241,7 +241,7 @@ color:#86AE19;
 }
 #list .item .title span.recomended {
 padding:0;
-color:#86AE19;
+color:#ff6600;
 }
 /*********************PRODUCT*********************/
 
